Fixes for util changes